--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,29 @@
-name: dnd-db
+name: 'dnd-backend'
 
 services:
+  backend:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - '3333:3333'
+    environment:
+      DATABASE_URL: postgresql://docker:docker@pg:5432/dnd
+      JWT_SECRET: secret
+      BASE_URL: ${BASE_URL}
+    depends_on:
+      - pg
+
   pg:
     image: bitnami/postgresql:13.16.0
     ports:
       - '5432:5432'
     environment:
-      - POSTGRES_USER=docker
-      - POSTGRES_PASSWORD=docker
-      - POSTGRES_DB=dnd
+      POSTGRES_USER: docker
+      POSTGRES_PASSWORD: docker
+      POSTGRES_DB: dnd
+    volumes:
+      - postgres_data:/bitnami/postgresql
+
+volumes:
+  postgres_data:
