feat: first commit

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 DATABASE_URL="postgresql://docker:docker@localhost:5432/dnd"
 JWT_SECRET="secret"
-BASE_URL="http://localhost:3333/api"
+BASE_URL="http://localhost:3333"
 PORT=3333
