--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "tsx watch --env-file .env src/http/server.ts"
+    "dev": "tsx watch --env-file .env src/http/server.ts",
+    "build": "yarn install && yarn drizzle-kit generate && yarn drizzle-kit migrate"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.8.3",
