--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "license": "MIT",
   "scripts": {
     "dev": "yarn migrate && tsx watch --env-file .env src/http/server.ts",
-    "migrate": "yarn drizzle-kit generate && yarn drizzle-kit migrate"
+    "migrate": "yarn drizzle-kit generate && yarn drizzle-kit migrate",
+    "build": "babel src --out-dir dist --extensions \".ts,.tsx\"",
+    "start": "NODE_ENV=production node dist/http/server.js"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.8.3",
@@ -17,6 +19,10 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "@babel/cli": "^7.26.4",
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-typescript": "^7.26.0",
     "@fastify/cors": "^10.0.1",
     "@fastify/jwt": "^9.0.1",
     "@fastify/multipart": "^9.0.1",
@@ -24,6 +30,7 @@
     "@paralleldrive/cuid2": "^2.2.2",
     "bcryptjs": "^2.4.3",
     "dayjs": "^1.11.13",
+    "dotenv": "^16.4.7",
     "drizzle-orm": "^0.33.0",
     "fastify": "^5.0.0",
     "fastify-type-provider-zod": "^3.0.0",
