--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ DATABASE_URL=postgresql://docker:7vHokjn6f3JwYAItwGoq0aDSrmBnoyp2@dpg-cteo3p1u0j
 JWT_SECRET="secret"
 BASE_URL="http://localhost:3333"
 PORT=3333
-NODE_ENV=production
+NODE_ENV=development
