--- a/babel.config.json
+++ b/babel.config.json
@@ -2,5 +2,12 @@
   "presets": [
     "@babel/preset-env",
     "@babel/preset-typescript"
+  ],
+  "ignore": [
+    "**/*.test.ts",
+    "**/*.test.js"
+  ],
+  "include": [
+    ".drizzle/**/*.ts"
   ]
 }
