--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
-DATABASE_URL="postgresql://docker:docker@localhost:5433/kyc-db"
-JWT_SECRET="secret"
+# DATABASE_URL="postgresql://docker:docker@localhost:5433/kyc-db"
+DATABASE_URL=postgresql://docker:g928Ng6zxELzt975wPQHvouORFfRceg2@dpg-ctgpvvl6l47c73e9hkr0-a.oregon-postgres.render.com/kyc_db
 BASE_URL="http://localhost:3333"
 PORT=3333
-NODE_ENV=development
-
-
+NODE_ENV=production
+JWT_SECRET='secret'
