--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "outDir": "./dist",
     "moduleResolution": "Node",
     "resolveJsonModule": true,
+    "baseUrl": "./",
     "paths": {
       "@/*": [
         "./src/*"
