--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-# DATABASE_URL="postgresql://docker:docker@localhost:5433/kyc-db"
-DATABASE_URL=postgresql://docker:g928Ng6zxELzt975wPQHvouORFfRceg2@dpg-ctgpvvl6l47c73e9hkr0-a.oregon-postgres.render.com/kyc_db
+DATABASE_URL="postgresql://docker:docker@localhost:5433/kyc-db"
 BASE_URL="http://localhost:3333"
 PORT=3333
 NODE_ENV=production
